0027332: Duplicate output from Draw Interpreter in cout in the debug function Draw_Eval